// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Top should render close icon when open 1`] = `
<div
  className="Top"
  onClick={[MockFunction]}
>
  <UnstyledLink
    aria-controls="mobile-navigation-wrapper"
    aria-expanded={true}
    className="Menu"
    data-id="top-navigation-button"
    role="button"
    to="javascript:void(0);"
  >
    <Close
      size={24}
    />
    <ScreenReaderOnly>
      Menu
    </ScreenReaderOnly>
  </UnstyledLink>
  <Link
    className="MobileLogo"
    replace={false}
    to="/landing"
  >
    <Logo
      type="halfWhite"
    />
  </Link>
  <div
    className="MobileAccountDropdownWrapper"
  >
    <Connect(AccountDropdown) />
  </div>
</div>
`;

exports[`Top should render correctly on desktop 1`] = `
<div
  className="Top"
>
  <Link
    className="Logo"
    replace={false}
    to="/landing"
  >
    <Logo
      type="halfWhite"
    />
  </Link>
  <div
    className="RightSideWrapper"
  >
    <Connect(NotificationCenter) />
    <button
      className="SupportButton"
      onClick={[Function]}
      title="Opens a dialog"
    >
      <HelpOutline
        className="SupportIcon"
        size={22}
      />
      <ScreenReaderOnly>
        Help
      </ScreenReaderOnly>
    </button>
    <Connect(AccountDropdown) />
  </div>
</div>
`;

exports[`Top should render correctly on mobile 1`] = `
<div
  className="Top"
>
  <UnstyledLink
    aria-controls="mobile-navigation-wrapper"
    aria-expanded={false}
    className="Menu"
    data-id="top-navigation-button"
    onClick={[MockFunction]}
    role="button"
    to="javascript:void(0);"
  >
    <Menu
      size={24}
    />
    <ScreenReaderOnly>
      Menu
    </ScreenReaderOnly>
  </UnstyledLink>
  <Link
    className="MobileLogo"
    replace={false}
    to="/landing"
  >
    <Logo
      type="halfWhite"
    />
  </Link>
  <div
    className="MobileAccountDropdownWrapper"
  >
    <Connect(AccountDropdown) />
  </div>
</div>
`;
